# community_ar

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  FEATURES.md  GOVERNANCE.md  README.md  ROADMAP.md  TESTING.md  analysis_options.yaml  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
android/: build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: jni_bridge.cpp
android/src/main/kotlin/dev/communityar/: CameraStream.kt  CommunityARPlugin.kt  GlRenderPipeline.kt
docs/: ANDROID_RENDER_PIPELINE.md  AR_INTEGRATION_SPEC.md  CARRIED_FORWARD.md  CONSOLIDATION_AND_BRINGUP.md  DETAILED_CHANGELOG.md  IOS_RENDER_PIPELINE.md  PATCH_BLAZEFACE_INTEGRATION.md  PHASE_0.md  PHASE_1.md  PHASE_1_FIXES_ROUND_1.md  PHASE_1_FIXES_ROUND_2.md  PHASE_2.md  PHASE_2_REQUIREMENTS.md  RENDER_PIPELINE_OWNERSHIP.md  START_HERE.md  STRATEGY.md  WELCOME_MESSAGES.md  car-phase-0.md  car-phase-1-fixes-round-1.md  car-phase-1-fixes-round-2.md  car-phase-1.md  car-phase-2-requirements.md  car-phase-2.md  car-phase-3-dag.md  car-phase-3-requirements.md  car-phase-3.md  car-phase-4-requirements.md
example/: .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
example/.dart_tool/: package_config.json  package_graph.json
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/dev/communityar/community_ar_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
ios/: community_ar.podspec
ios/Classes/: CameraStream.swift  CommunityARPlugin.swift
lib/: community_ar.dart
lib/src/effects/: beauty_filter_config.dart  beauty_preset.dart  beauty_quality.dart  effect.dart  effect_graph.dart  lips_effect.dart  skin_smooth_effect.dart
lib/src/ffi/: community_ar_phase0_ffi.dart  community_ar_phase1_ffi.dart  community_ar_phase2_ffi.dart  community_ar_phase3_ffi.dart
lib/src/widgets/: community_ar_phase0_view.dart  community_ar_view.dart
native/core/: phase0_session.cpp  phase0_session.h  phase0_session_phase2.h  phase0_session_phase2_updates.cpp
native/core/effects/: beauty_shader_common.h  beauty_shader_p1_skin_mask.h  beauty_shader_p2_downsample.h  beauty_shader_p3_bilateral.h  beauty_shader_p4_upsample.h  beauty_shader_p55_specular.h  beauty_shader_p5_composition.h  beauty_shader_p65_temporal.h  beauty_shader_p6_glow.h  effect_base.h  effect_base_phase3_updates.h  effect_graph.cpp  effect_graph.h  effect_pass.h  effect_types.h  lips_effect.cpp  mask_rasterizer.cpp  mask_rasterizer.h  mask_resource_pool.cpp  mask_resource_pool.h  masked_recolor_effect.cpp  masked_recolor_effect.h  masked_recolor_effect_phase3_updates.cpp  skin_smooth_effect.cpp  skin_smooth_effect.h
native/core/ffi/: community_ar_phase0_api.cpp  community_ar_phase0_api.h  community_ar_phase1_api.cpp  community_ar_phase1_api.h  community_ar_phase2_api.cpp  community_ar_phase2_api.h  community_ar_phase3_api.cpp  community_ar_phase3_api.h
native/core/math/: pnp_solver.cpp  pnp_solver.h
native/core/ml/: coreml_backend.mm  neural_backend.h  tflite_backend.cpp  tflite_backend_stub.cpp
native/core/perception/: blazeface_decoder.cpp  blazeface_decoder.h  face_landmarker.cpp  face_landmarker.h  face_tracker.cpp  face_tracker.h  hair_segmenter_backend.cpp  hair_segmenter_backend.h  iris_landmarker.cpp  iris_landmarker.h  multiclass_segmenter_backend.cpp  multiclass_segmenter_backend.h  one_euro_filter.cpp  one_euro_filter.h  perception_frame.h  perception_frame_phase3_updates.h  perception_inputs_phase3_updates.h  perception_log.h  perception_models.cpp  perception_models.h  perception_pipeline.cpp  perception_pipeline.h  perception_pipeline_impl.h  perception_pipeline_phase3_updates.cpp  segmenter_backend.h  segmenter_backend_factory.cpp  segmenter_backend_factory.h  skin_tone.cpp  skin_tone.h
native/core/render/: compute_primitives.h  debug_overlay.cpp  debug_overlay.h  gles_compute.cpp  gles_render_context.cpp  gles_render_context_phase3_updates.cpp  metal_compute.mm  metal_render_context.mm  metal_render_context_phase3_updates.mm  render_context.h  render_context_additions.h
tools/: convert_models_to_coreml.py  fetch_models.sh  fetch_tflite.sh  fetch_tflite_prebuilt.sh
